Fixed a problem on mobile devices that caused the brand and the x icon to hide under the main navigation when it was expanded. From now, navigation uses flexbox layout isntead of floats.

--- a/components/Overlay Navigation/Responsive Overlay Navigation/style.css
+++ b/components/Overlay Navigation/Responsive Overlay Navigation/style.css
@@ -45,13 +45,16 @@ nav {
       flex-direction: row;/*default*/
       flex-wrap: nowrap;/*default*/
       justify-content: space-evenly;
-
+	  align-items:center;
+	  z-index: 999;
 }
+
 
 nav #brand {
       display: block;
       font-size: 1.8em;
       font-weight: 400;
+	
 }
 
 nav #brand a {
@@ -59,22 +62,19 @@ nav #brand a {
       transition: all 0.3s ease-out;
       font-weight: 300;
 }
+/*
 nav #brand a:hower{
-      
-}
+      /*later*/
+} */
 
 nav .menu {
-      float: left;
-      left: 50%;
-      position: relative;
+	/*deleted floats*/
 }
 
 nav .menu li {
       display: inline-block;
       padding: 0px 30px;
       cursor: pointer;
-      line-height: 70px;
-      position: relative;
       transition: all 0.3s ease-out;
 }
 
@@ -85,20 +85,21 @@ nav .menu li a {
 }
 
 #toggle {
-      position: absolute;
-      right: 20px;
-      top: 14px;
-      z-index: 999;
+	  position: absolute;
+	  right:10vw;
+	  top:0.5em;
+      
       width: 40px;
       height: 40px;
       cursor: pointer;
-      float: right;
       transition: all 0.3s ease-out;
       visibility: hidden;
       opacity: 0;
+	  
 }
 
 #toggle .span {
+	  
       height: 3px;
       background: #fff;
       transition: all 0.3s ease-out;
@@ -120,8 +121,8 @@ nav .menu li a {
 
 #resize {
       z-index: 1;
-      top: 0px;
       position: absolute;
+	  top: 0px;
       background: #000;
       width: 100%;
       height: 100%;
@@ -166,11 +167,13 @@ nav .menu li a {
       #toggle {
             visibility: visible;
             opacity: 1;
-            margin-top: 6px;
+        
       }
 
       nav #brand {
             margin-left: 18px;
+			position:absolute;
+			left:10vw;
       }
 
       .menu a {
